Bug 1357002 - Part 1: Cache "dom.webcomponents.customelements.enabled" preference; r=wchen

MozReview-Commit-ID: HMsvOmYJvjX